ItemVendaResponse incluído no VendaResponse Dto, correção em UseCase ListarVendas e o CorsConfig